--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ url: "https://lm-fbi.github.io" # the base hostname & protocol for your site, e.
 github_username:  lm-fbi
 
 # Build settings
-theme: minima
+# theme: minima
+theme: "just-the-docs"
 plugins:
   - jekyll-feed
 
